--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,21 @@
             <version>2.6.1</version>
         </dependency>
 
-
-
         <dependency>
             <groupId>cz.zcu.kiv</groupId>
             <artifactId>Semantic-Framework</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
 
     </dependencies>
